--- a/work.html
+++ b/work.html
@@ -94,7 +94,7 @@
         <!-- project 07 -->
         <div class="item">
           <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_07.gif"/>
+          <img alt="Project" src="./img/projects/project_07.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
@@ -108,7 +108,7 @@
         <!-- project 09 -->
         <div class="item">
           <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_09.gif"/>
+          <img alt="Project" src="./img/projects/project_09.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
@@ -122,7 +122,7 @@
         <!-- project 11 -->
         <div class="item">
           <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_11.gif"/>
+          <img alt="Project" src="./img/projects/project_11.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
@@ -136,7 +136,7 @@
         <!-- project 13 -->
         <div class="item">
           <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_13.gif"/>
+          <img alt="Project" src="./img/projects/project_13.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
