--- a/work.html
+++ b/work.html
@@ -45,8 +45,8 @@
       <div class="projects">
         <!-- project 01 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_01.gif"/>
+          <a href="https://github.com/yanndepps/Sketches" target="_blank">
+            <img alt="Project" src="./img/projects/project_01.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
           <!-- <a class="btn-light" href="https://github.com/yanndepps/CanvasSketch" target="_blank">
@@ -58,105 +58,105 @@
         </div>
         <!-- project 02 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_02.gif"/>
+          <a href="https://github.com/yanndepps/Sketchbook" target="_blank">
+            <img alt="Project" src="./img/projects/project_02.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 03 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_03.gif"/>
+          <a href="https://github.com/yanndepps/CanvasSketch" target="_blank">
+            <img alt="Project" src="./img/projects/project_03.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 04 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_04.gif"/>
+          <a href="https://github.com/yanndepps/CanvasSketch" target="_blank">
+            <img alt="Project" src="./img/projects/project_04.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 05 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_05.gif"/>
+          <a href="https://github.com/yanndepps/CanvasSketch" target="_blank">
+            <img alt="Project" src="./img/projects/project_05.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 06 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_06.gif"/>
+          <a href="https://github.com/yanndepps/CanvasSketch" target="_blank">
+            <img alt="Project" src="./img/projects/project_06.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 07 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_07.png"/>
+          <a href="https://github.com/yanndepps/Sketches" target="_blank">
+            <img alt="Project" src="./img/projects/project_07.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 08 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_08.gif"/>
+          <a href="https://github.com/yanndepps/CanvasSketch" target="_blank">
+            <img alt="Project" src="./img/projects/project_08.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 09 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_09.png"/>
+          <a href="https://github.com/yanndepps/Sketches" target="_blank">
+            <img alt="Project" src="./img/projects/project_09.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 10 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_10.gif"/>
+          <a href="https://github.com/yanndepps/Sketches" target="_blank">
+            <img alt="Project" src="./img/projects/project_10.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 11 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_11.png"/>
+          <a href="https://github.com/yanndepps/Project_Fox_Game" target="_blank">
+            <img alt="Project" src="./img/projects/project_11.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 12 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_12.gif"/>
+          <a href="https://github.com/yanndepps/CanvasSketch" target="_blank">
+            <img alt="Project" src="./img/projects/project_12.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 13 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_13.png"/>
+          <a href="https://github.com/yanndepps/Sketches" target="_blank">
+            <img alt="Project" src="./img/projects/project_13.png"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 14 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_14.gif"/>
+          <a href="https://github.com/yanndepps/B3D" target="_blank">
+            <img alt="Project" src="./img/projects/project_14.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 15 -->
         <div class="item">
-          <!-- <a href="https://github.com/yanndepps/CanvasSketch" target="_blank"> -->
-          <img alt="Project" src="./img/projects/project_15.gif"/>
+          <a href="https://github.com/yanndepps/B3D" target="_blank">
+            <img alt="Project" src="./img/projects/project_15.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
         </div>
         <!-- project 16 -->
         <div class="item">
-          <!-- <a href="#"> -->
+          <a href="https://github.com/yanndepps/B3D" target="_blank">
           <img alt="Project" src="./img/projects/project_16.gif"/>
           <!-- </a> -->
           <!-- buttons if more infos -->
